# permissions-dsl-challenge

./: .coveragerc  .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  PROBLEM.md  README.md  docker-compose.yml  interview-challenge.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  rollback.yml
docs/: 3_ARCHITECTURE.yaml  3_ARCHITECTURE_DIAGRAM.md  3_DEVOPS_PLAN.yaml  4_VERSION_CONTROL_PLAN.yaml  5_TEST_PLAN.yaml  5_TEST_SCENARIO.yaml  5_TEST_STRATEGY.yaml  6_CI_CD_PIPELINE.yaml  6_DEPLOYMENT_STRATEGY.yaml  6_LOCAL_DEVELOPMENT_PLAN.yaml
migrations/: 001_initial_schema.sql  002_add_indexes.sql  003_sample_data.sql
permissions-dsl/spec/: 3_SERVICE_SEQUENCE_DIAGRAM_permission-control.md  4_api_service_permission-control.yaml  4_data_structure_permission-control.yaml
references/: figma-permissions-dsl-ko.md
schema/: resource_policy.json  user_policy.json
scripts/: setup.sh
src/: __init__.py  main.py
src/api/: __init__.py  routes.py
src/components/: __init__.py  builder.py  evaluator.py  filter_engine.py
src/database/: __init__.py  connection.py  repository.py
src/models/: __init__.py  common.py  entities.py  policies.py  resource_policy.py  user_policy.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api_endpoints.py  test_scenarios.py
tests/unit/: test_builder.py  test_evaluator.py  test_filter_engine.py  test_repository.py
