[project]
name = "permissions-dsl-challenge"
version = "1.0.0"
description = "Policy-based permission control system for document management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datamodel-code-generator>=0.39.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pytest-cov>=7.0.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]
