[project]
name = "permissions-dsl-challenge"
version = "1.0.0"
description = "Policy-based permission control system for document management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datamodel-code-generator>=0.39.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pytest-cov>=7.0.0",
    "isort>=7.0.0",
    "ruff>=0.14.8",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
# Note: "I" (isort) is intentionally excluded since we use isort directly
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = ["ARG001", "ARG002"]  # unused function arguments in tests
"src/main.py" = ["ARG001"]  # FastAPI requires specific function signatures
"src/api/routes.py" = ["B904"]  # intentional exception wrapping for API responses
"src/database/connection.py" = ["B904"]  # intentional exception wrapping for better error messages
"src/components/evaluator.py" = ["SIM102"]  # nested ifs for clarity

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
